--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
 }
-.Score {
+.scoreBtn {
   border-radius: 3px;
   border-color: rgb(110, 67, 150);
   min-height: 40px;
@@ -24,12 +24,6 @@
   background-color: rgb(110, 67, 150);
   color: white;
   font-weight: 800;
-}
-
-.Timer {
-  font-size: 40px;
-  color: rgb(110, 67, 150);
-  font-weight: 800px;
 }
 
 .container-fluid {
