--- a/style.css
+++ b/style.css
@@ -66,3 +66,10 @@ nav {
   align-items: center;
   margin-top: 20px;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
