--- a/style.css
+++ b/style.css
@@ -70,9 +70,13 @@ nav {
 }
 
 #initialsContainer {
-  height: 200px;
+  height: 100px;
   visibility: hidden;
-  background-color: #ff0000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
 }
 
 section {
@@ -80,4 +84,12 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#highScoresList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
 }
